<resources>
    <string name="app_name">nku-app</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_header">Please enter your NKU ID and password.</string>
    <string name="login_button">Login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="parking_text">Parking</string>
    <string name="campus_map">Map</string>
    <string name="reminders">Reminders</string>
    <string name="nku_directory">NKU directory</string>
    <string name="safety">Safety</string>
    <string name="email">Email</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase user: %s</string>
    <string name="sign_out_failed">Sign out failed!</string>
    <string name="delete_warning">Are you sure you want to delete this account?</string>
    <string name="confirm_delete">Yes, delete it!</string>
    <string name="signed_in_header">Welcome, %s!</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="user_profile_header">User profile:</string>
    <string name="delete_account_failed">Failed to delete account!</string>
    <string name="providers_email">Email</string>
    <string name="providers_google">Google</string>
    <string name="providers_anonymous">Anonymous</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="signed_out">Signed out</string>
    <string name="login_title">Please sign in</string>
    <string name="hint_password">Password</string>
    <string name="verify_email">Verify email</string>
    <string name="signed_in">Signed in!</string>
    <string name="title_activity_maps">Map</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">Tasks</string>

    <string name="next_garage_button"> Next  </string>
    <string name="generic_date"> M/D/Y  </string>
    <string name="generic_holder"> Temp Holding Text  </string>
    <string name="generic_holder_garage_name"> Garage Name  </string>
    <string name="refresh_button"> Refresh  </string>
    <string name="prev_button">Previous</string>
    <string name="previous_button">previous</string>

    <string name="current_date">December 2018</string>
    <string name="last_date">31</string>
    <string name="MarkerParkingAvailability">Available parking spots:</string>


</resources>
