<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/home"
            android:title="Home"
            android:icon = "@drawable/ic_school_black_24dp"
            />


        <item
            android:id="@+id/parking"
            android:title="@string/parking_text"
            android:icon="@drawable/ic_directions_car_black_24dp"
            />


        <item
            android:id="@+id/googleMap"
            android:title="@string/campus_map"
            android:icon="@drawable/ic_map_black_24dp"

            />

        <item
            android:id="@+id/calendar"
            android:title="@string/calendar"
            android:icon="@drawable/ic_event_note_black_24dp"
            />

        <item
            android:id="@+id/tasks"
            android:title="@string/tasks"
            android:icon="@drawable/ic_add_box_black_24dp" />

        <item
            android:id="@+id/directory"
            android:title="@string/nku_directory"
            android:icon="@drawable/ic_group_black_24dp"
            />


        <item
            android:id="@+id/sign_out"
            android:title="@string/sign_out"
            android:icon="@drawable/ic_arrow_forward_black_24dp"
            />
    </group>

</menu>