<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/login_vertical_margin"
    android:paddingBottom="@dimen/login_vertical_margin"
    android:paddingLeft="@dimen/login_horizontal_margin"
    android:paddingRight="@dimen/login_horizontal_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login_username"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_header"
        android:layout_marginTop="20dp"
        android:hint="@string/login_username_hint"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/login_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_username"
        android:hint="@string/login_password_hint"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_below="@id/login_password"
        android:layout_alignEnd="@id/login_password"
        android:onClick="attemptLogin"/>

</RelativeLayout>